# Alaric

./: .gitignore  .readthedocs.yaml  LICENSE  dev-requirements.txt  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/workflows/: pytest.yml
alaric/: __init__.py  advanced_query.py  cached_document.py  cursor.py  document.py  encrypted_document.py  query_builder.py  util.py
alaric/abc/: __init__.py  buildable.py  comparison.py  filterable.py  logical.py  readme.md  saveable.py
alaric/comparison/: __init__.py  comparison_eq.py  comparison_exists.py  comparison_greater_than.py  comparison_in.py  comparison_less_than.py  comparison_regex.py  readme.md
alaric/cursors/: cursor.py
alaric/encryption/: __init__.py  automatic_hashed_fields.py  base.py  encrypted_fields.py  hashed_fields.py  hashed_query_field.py  ignore_fields.py
alaric/logical/: __init__.py  logical_and.py  logical_not.py  logical_or.py  readme.md
alaric/meta/: __init__.py  all.py  case_insensitive.py  negate.py
alaric/projections/: __init__.py  hide.py  projections.py  show.py
alaric/types/: __init__.py  object_id.py
docs/: conf.py  index.rst  requirements.txt
docs/modules/: cached_document.rst  cursor.rst  extra.rst  main.rst  why_alaric.rst
docs/modules/encryption/: base.rst  fields.rst
docs/modules/objects/: abc.rst  advanced_query.rst  comparison_t.rst  logical_t.rst
docs/modules/selectors/: comparisons.rst  examples.rst  (+3 more)
tests/: conftest.py  converter.py  test_all.py  test_cached_document.py  test_cursors.py  test_document.py  test_encrypted_document.py
(+1 files in other folders)
